--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "demo-wrapper-route-express",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "dependencies": {
     "body-parser": "^1.20.2",
     "casbin-sequelize-adapter": "^2.6.1",
@@ -10,6 +9,7 @@
     "express": "^4.18.2",
     "glob": "^9.3.1",
     "joi": "^17.9.0",
+    "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
     "pg": "^8.10.0",
     "sequelize": "^6.29.3",
