fix and update demo

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "demo-wrapper-route"
+  ],
   "author": "",
   "license": "ISC",
   "description": ""
