--- a/package.json
+++ b/package.json
@@ -16,13 +16,32 @@
     "swagger-ui-express": "^4.6.2",
     "wrapper-route": "^1.1.0"
   },
+  "lint-staged": {
+    "*.js": [
+      "prettier write",
+      "eslint"
+    ]
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install",
+    "lint": "eslint ."
   },
   "keywords": [
     "demo-wrapper-route"
   ],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.1",
+    "prettier": "^2.8.7"
+  }
 }
